# routeros-api

./: api_example.py  index.html  pyproject.toml
templates/: template.html.jinja
